--- a/internal/client/src/App.css
+++ b/internal/client/src/App.css
@@ -73,3 +73,25 @@
 .button-group.secondary:hover {
   background-color: #666;
 }
+.btn-register {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: blue;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.btn-authenticate {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: green;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
