--- a/internal/client/src/index.css
+++ b/internal/client/src/index.css
@@ -35,14 +35,14 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #3e51e1;
+  background-color: #217e34;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -52,7 +52,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
